# F3slic3r

./: CMakeLists.txt  F3Slic3r-License.rtf  README.md  version.inc
.github/workflows/: build.yml
bundled_deps/: CMakeLists.txt
bundled_deps/libvgcode/: CMakeLists.txt
bundled_deps/localesutils/: LocalesUtils.cpp
doc/: How to build - Linux et al.md  How to build - Mac OS.md
f3slic3r_resources/: F3Slic3r.idx  F3Slic3r.ini  F3Slic3rBASE.ini  PrusaSlicer.ini  PrusaSlicerGcodeViewer.ini.bak  merge.bat
f3slic3r_resources/cache/: Anycubic.idx  Artillery.idx  BIBO.idx  FLSun.idx  Jubilee.idx  LulzBot.idx  PrusaResearch.ini  Snapmaker.idx  Zonestar.idx  gCreate.idx  hints.cereal
installer/: .gitignore  F3Slic3r-updates.aip  F3Slic3r.aip  F3Slic3r.back.aip
sandboxes/: Videos - Shortcut.lnk
src/: CMakeLists.txt  PrusaSlicer.cpp  PrusaSlicer.hpp  PrusaSlicer_app_msvc.cpp
src/libvgcode/: CMakeLists.txt
src/libvgcode/glad/include/glad/: glad.h
src/libvgcode/glad/src/: glad.c
src/libvgcode/include/: ColorPrint.hpp  ColorRange.hpp  GCodeInputData.hpp  PathVertex.hpp  Types.hpp  Viewer.hpp
src/libvgcode/include/libvgcode/: ColorPrint.hpp
src/libvgcode/src/: Bitset.hpp  CogMarker.cpp  CogMarker.hpp  ColorRange.cpp  ExtrusionRoles.cpp  ExtrusionRoles.hpp  Layers.cpp  Layers.hpp  OpenGLUtils.cpp  OpenGLUtils.hpp  OptionTemplate.cpp  OptionTemplate.hpp  PathVertex.cpp  SegmentTemplate.cpp  SegmentTemplate.hpp  Settings.hpp  Shaders.hpp  ShadersES.hpp  ToolMarker.cpp  ToolMarker.hpp  Types.cpp  Utils.hpp  Viewer.cpp  ViewerImpl.cpp  ViewerImpl.hpp
(+1421 files in other folders)
